# pmd

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  go.mod  go.sum  main.go
.github/workflows/: ci.yml  main.yml  release.yml
cmd/app/: main.go
config/: config.go  config.yml
internal/app/: app.go
internal/app/cmd/: listen.go  root.go
internal/http/: clear.go  dump.go  get.go  router.go
internal/rpc/: socket.go
internal/ui/: ui.go
pkg/termui/: termui.go
src/: config.rs  main.rs  server.rs  ui.rs
src/ui/: keymap.rs  layout.rs
src/ui/layout/: tree.rs
stubs/: config.toml
