[package]
name = "pmd"
version = "0.0.1"
edition = "2021"
authors = ["nkoporec <me@nkoporec.com>"]
description = "Poor's man debugger, the most easy way to debug"
readme = "README.md"
repository = "https://github.com/nkoporec/pmd/"
license = "MIT"
license-file = "LICENSE"
keywords = ["debugger", "tui"]
categories = ["command-line-utilities", "development-tools", "development-tools::debugging"]

[dependencies]
crossterm = { version = "0.25"}
tui = { version = "0.19", features = ["termion"] }
axum = "0.6.2"
toml = "0.5.10"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.91"
clap = { version = "4.1.1", features = ["derive"] }
home = "0.5.4"
rust-embed = "6.4.2"
tui-tree-widget = "0.11.0"
